--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
 
 </head>
 
-<body class="bg-secondary   ">
-    <div class="container">
-        <div class="row justify-content-center ">
-            <div class="col-md-6 card shadow-lg m-5 p-4 border-radius-3">
+<body class="bg-secondary">
+    <div class="container ">
+        <div class="row justify-content-center align-items-center vh-100">
+            <div class="col-md-6 card shadow-lg  p-4 border-radius-3">
                 <h2 class="login_txt">Login Page</h2>
                 <h4 class="login_subtxt">Please enter your credentials to login</h4>
-                <div class="m-1">
+                <div class="mt-3">
                     <label class="form-label lbl">Email</label>
                     <input type="email" class="form-control" placeholder="Enter email" id="email" required>
 
                 </div>
-                <div class="m-1">
+                <div class="mt-3">
                     <label class="form-label lbl">Password</label>
                     <input type="password" class="form-control" placeholder="Enter password" id="password" required >
                 </div>
